Bugfix css bug on IE7

--- a/website/htdocs/ogam/public/css/global.css
+++ b/website/htdocs/ogam/public/css/global.css
@@ -320,32 +320,53 @@ img.percentImage {
     margin: 50px 0;
     text-align: center;
 }
+td.view-cell{
+    background: url(../img/magnifier.png) 5px 5px no-repeat;
+    width:21px;
+}
 .view-cell a{
-    background: url(../img/magnifier.png) top left no-repeat;
     padding: 1px 8px;
 }
-.pdf-cell a {
-    background: url(../img/icon_pdf.gif) top left no-repeat;
+td.pdf-cell{
+    background: url(../img/icon_pdf.gif) 5px 5px no-repeat;
+    width:21px;
+}
+.pdf-cell a{
     padding: 1px 8px;
 }
-.view-content-cell a {
-    background: url(../img/page_white_magnify.png) top left no-repeat;
+td.view-content-cell{
+    background: url(../img/page_white_magnify.png) 5px 5px no-repeat;
+    width:21px;
+}
+.view-content-cell a{
     padding: 1px 8px;
 }
-.view-meta-cell a {
-    background: url(../img/page_white_database.png) top left no-repeat;
+td.view-meta-cell{
+    background: url(../img/page_white_database.png) 5px 5px no-repeat;
+    width:21px;
+}
+.view-meta-cell a{
     padding: 1px 8px;
+}
+td.edit-cell{
+    background: url(../img/page_white_edit.png) 5px 5px no-repeat;
+    width:21px;
 }
 .edit-cell a{
-    background: url(../img/page_white_edit.png) top left no-repeat;
     padding: 1px 8px;
+}
+td.change-password-cell{
+    background: url(../img/key.png) 5px 5px no-repeat;
+    width:21px;
 }
 .change-password-cell a{
-    background: url(../img/key.png) top left no-repeat;
     padding: 1px 8px;
 }
+td.delete-cell{
+    background: url(../img/delete.png) 5px 5px no-repeat;
+    width:21px;
+}
 .delete-cell a{
-    background: url(../img/delete.png) top left no-repeat;
     padding: 1px 8px;
 }
 .index-cell .index-cell-create{
